--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,17 +13,26 @@
     <string name="password_length_error">Your password should have at least six digits.</string>
     <string name="password_error">Your password should include one digit, one lower case letter and one upper case letter.</string>
     <string name="farms">مزارع</string>
+    <string name="farms_description">يمكنك اختيار عمل حساب مزارع من التمتع بالخصاءص العديدة</string>
     <string name="farm">مزرعة</string>
+    <string name="farm_description">يمكنك اختيار عمل حساب كمستخدة مزرعة من التمتع بالخصائص العديدة</string>
     <string name="engineer">مهندس</string>
-    <!-- Login Screen -->
+    <string name="engineer_description">يمكنك اختيار عمل حساب كمهندس من التمتع بالخصائص العديدة</string>
     <string name="user_name_text_field">إسم المستخدم</string>
     <string name="password_text_field">كلمة المرور</string>
+    <string name="signup_button">إنشاء حساب</string>
+    <!-- Login Screen -->
     <string name="forgot_password_text">هل نسيت كلمة المرور؟</string>
     <string name="click_here">إضغط هنا</string>
     <string name="login_button">تسجيل الدخول</string>
     <string name="new_user_text">مستخدم جديد لأجريكان؟</string>
-    <string name="signup_button">إنشاء حساب</string>
     <!-- Signup Screen -->
+    <string name="create_new_user">إنشاء حساب جديد</string>
+    <string name="choose_user_account">اختار نوع الحساب</string>
     <string name="user_name_error">Please insert a valid name.</string>
+    <string name="phone_number_error">Please insert a valid phone number.</string>
     <string name="password_match_error">Passwords do not match.</string>
+    <string name="repeat_password_text_field">تأكيد كلمة المرور</string>
+    <string name="phone_number_text_field">رقم الهاتف المحمول</string>
+    <string name="email_text_field">البريد الإلكترونى</string>
 </resources>
