--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,12 @@
     <string name="image_of_certificate">صورة من شهادة التخرج أو شهادة خبرة</string>
     <string name="add_image">إضافة صورة</string>
     <string name="send">إرسال</string>
+
+    <!-- Diseases Screen -->
+    <string name="search_for_another_disease">ابحث عن مرض آخر</string>
+    <string name="naming">التسمية</string>
+    <string name="description">الوصف</string>
+    <string name="reasons">الأسباب المحتملة</string>
+    <string name="effect_on_plants">التأثير على النباتات</string>
+    <string name="cure">العلاج و الوقاية</string>
 </resources>
