--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="empty_password_error">Password cannot be empty.</string>
     <string name="password_length_error">Your password should have at least six digits.</string>
     <string name="password_error">Your password should include one digit, one lower case letter and one upper case letter.</string>
-    <string name="farms">مزارع</string>
+    <string name="farmer">مزارع</string>
     <string name="farms_description">يمكنك اختيار عمل حساب مزارع من التمتع بالخصاءص العديدة</string>
     <string name="farm">مزرعة</string>
     <string name="farm_description">يمكنك اختيار عمل حساب كمستخدة مزرعة من التمتع بالخصائص العديدة</string>
@@ -167,4 +167,19 @@
     <string name="signs_and_symptoms">العلامات و الأعراض</string>
     <string name="injury_season">موسم الإصابة</string>
     <string name="control_timing">توقيت المكافحة</string>
+
+    <!-- Profile Screen -->
+    <string name="modify_data">تعديل البيانات</string>
+    <string name="cost">التكلفة</string>
+    <string name="add_farm">إضافة مزرعة</string>
+    <string name="add_farm_description">يمكنك إضافة مزرعة و متابعة المحاصيل من خلال إضافة مزرعة</string>
+    <string name="add_crop">إضافة محصول لمزرعة</string>
+    <string name="add_crop_description">يمكنك إضافة محصول و متابعة المحصول من خلال إضافة محصول</string>
+    <string name="engineer_map">خريطة المهندس</string>
+    <string name="engineer_map_description">يمكنك تحديد أماكن المشكلة فى الأرض و متابعتها من خلال خريطة المهندس</string>
+    <string name="farms_label">المزارع</string>
+    <string name="my_crops">محاصيلى</string>
+    <string name="observe_crop">متابعة المحصول</string>
+    <string name="add_task">إضافة مهمة</string>
+
 </resources>
