--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Agrican</string>
+    <string name="generic_error">Something wrong happened. Please try again.</string>
 
     <!-- Onboarding Screen -->
     <string name="onboarding_text_1">مساعدك الذكى بين يديك</string>
