--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,13 @@
     <!-- Order Status -->
     <string name="empty_orders">لا يوجد عروض حتى الآن</string>
     <string name="confirm_order">تأكيد الطلب</string>
+    
+    <!-- Order Confirm -->
+    <string name="cash">كاش عند الوصول</string>
+    <string name="card_id">رقم البطاقة</string>
+    <string name="expire_date">تاريخ الانتهاء</string>
+    <string name="cvc">cw/cvc</string>
+    <string name="complete_buying">إكمال عملية الشراء</string>
 
     <!-- Treatment Screen -->
     <string name="choose_crop">اختار المحصول المصاب</string>
