--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="navigation_main">الرئيسية</string>
     <string name="navigation_profile">الملف الشخصى</string>
     <string name="navigation_agrican_services">خدمات اجريكان</string>
+    <string name="language">اللغة</string>
+    <string name="about_us">حول التطبيق</string>
 
     <!-- Main Screen -->
     <string name="weather">الطقس</string>
