--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="user_name_text_field">اسم المستخدم</string>
     <string name="password_text_field">كلمة المرور</string>
     <string name="signup_button">إنشاء حساب</string>
+    <string name="confirm_signup_button">Confirm Sign Up</string>
     <!-- Login Screen -->
     <string name="forgot_password_text">هل نسيت كلمة المرور؟</string>
     <string name="click_here">اضغط هنا</string>
@@ -31,11 +32,13 @@
     <string name="create_new_user">إنشاء حساب جديد</string>
     <string name="choose_user_account">اختار نوع الحساب</string>
     <string name="user_name_error">Please insert a valid name</string>
+    <string name="code_error">Please insert a valid code</string>
     <string name="phone_number_error">Please insert a valid phone number</string>
     <string name="password_match_error">Passwords do not match</string>
     <string name="repeat_password_text_field">تأكيد كلمة المرور</string>
     <string name="phone_number_text_field">رقم الهاتف المحمول</string>
     <string name="email_text_field">البريد الإلكترونى</string>
+    <string name="confirm_sign_up_text_field">Code that sent to Email</string>
 
     <!-- Home Screen -->
     <string name="navigation_main">الرئيسية</string>
