--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,13 +21,14 @@
     <string name="engineer_description">يمكنك اختيار عمل حساب كمهندس من التمتع بالخصائص العديدة</string>
     <string name="user_name_text_field">اسم المستخدم</string>
     <string name="password_text_field">كلمة المرور</string>
+    <string name="new_password_text_field">كلمة المرور الجديدة</string>
     <string name="signup_button">إنشاء حساب</string>
-    <string name="confirm_signup_button">Confirm Sign Up</string>
     <!-- Login Screen -->
     <string name="forgot_password_text">هل نسيت كلمة المرور؟</string>
     <string name="click_here">اضغط هنا</string>
     <string name="login_button">تسجيل الدخول</string>
     <string name="new_user_text">مستخدم جديد لأجريكان؟</string>
+    <string name="confirm_reset_password_button">Reset Password</string>
     <!-- Signup Screen -->
     <string name="create_new_user">إنشاء حساب جديد</string>
     <string name="choose_user_account">اختار نوع الحساب</string>
@@ -39,6 +40,7 @@
     <string name="phone_number_text_field">رقم الهاتف المحمول</string>
     <string name="email_text_field">البريد الإلكترونى</string>
     <string name="confirm_sign_up_text_field">Code that sent to Email</string>
+    <string name="confirm_signup_button">Confirm Sign Up</string>
 
     <!-- Home Screen -->
     <string name="navigation_main">الرئيسية</string>
