Sign Out Added onboarding Screen Background Fixed in wide screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="navigation_agrican_services">خدمات اجريكان</string>
     <string name="language">اللغة</string>
     <string name="about_us">حول التطبيق</string>
+    <string name="sign_out">تسجيل خروج</string>
 
     <!-- Main Screen -->
     <string name="weather">الطقس</string>
