--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,22 @@
     <string name="moderate_thunderstorm">Moderate thunderstorm</string>
     <string name="thunderstorm_with_slight_hail">Thunderstorm with slight hail</string>
     <string name="thunderstorm_with_heavy_hail">Thunderstorm with heavy hail</string>
+    <string name="n">N</string>
+    <string name="nne">NNE</string>
+    <string name="ne">NE</string>
+    <string name="ene">ENE</string>
+    <string name="e">E</string>
+    <string name="ese">ESE</string>
+    <string name="se">SE</string>
+    <string name="sse">SSE</string>
+    <string name="s">S</string>
+    <string name="ssw">SSW</string>
+    <string name="sw">SW</string>
+    <string name="wsw">WSW</string>
+    <string name="w">W</string>
+    <string name="wnw">WNW</string>
+    <string name="nw">NW</string>
+    <string name="nnw">NNW</string>
 
     <!-- Agrican Services Screen -->
     <string name="default_age">العمر الافتراضى للمحصول</string>
